--- a/style.css
+++ b/style.css
@@ -1,39 +1,215 @@
 * {
   font-family: 'Roboto', sans-serif;
+  color: white;
 }
 
 html, body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%
 }
 
-#cover{
+.liveContainer {
+  min-height: 100%;
   width: 100%;
-  height: 100%;
-  background: #52c234;
-  transition: all 0.5s linear;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #007e11;
+  bottom: 0;
+  z-index: 100;
+  transition: background 0.7s linear, min-height 0.25s  cubic-bezier(0.95, 0.05, 0.795, 0.035);
 }
 
-.inner {
-  display: inline-block;
+.liveContainerTimerView {
+  min-height: 0%;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 20px 30px;
+  box-shadow: 0px -2px 5px 1px rgba(0,0,0,0.22);
 }
 
-h2 {
-  text-transform: uppercase;
-  letter-spacing: 0.15em;
-  font-size: 2em;
-  color: white;
+.liveContainerContent {
+  padding: 30px;
+  border: 10px solid white;
+  transition: border-color 0.15s linear, padding 0.16s 0.2s linear;
+  
 }
 
-h1 {
-  font-size: 5em;
-  color: white;
+.liveContainerContentTimerView {
+  min-height: 100px;
+  border: 0px solid rgba(0, 0, 0, 0);
+  padding: 5px;
+}
+
+.liveContainerContent h2{
+  letter-spacing: 0.1em;
+  font-weight: 500;
   text-align: center;
+}
+
+.noMargin {
+  margin: 0 !important;
+}
+
+.liveContainerContent h1{
+  letter-spacing: 0.1em;
+  font-weight: 700;
+  text-align: center;
+  font-size: 3em;
+}
+
+.liveContainerContent hr {
+  width: 80%;
+  background-color: #fff;
+  height: 3px;
+}
+
+#config {
+  transition: all 0.5s 600ms cubic-bezier(0.95, 0.05, 0.795, 0.035);
+}
+
+.displayNone {
+  display: none;
+}
+
+#config h3 {
+  text-align: center;
+  font-weight: 400;
+  letter-spacing: 3px;
+  margin-bottom: 15px;
+}
+
+#configButtons {
+  font-size: 2em;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.circleButton {
+  border: 1px solid white;
+  border-radius: 50%;
+  font-weight: 100;
+  width: 38px;
+  height: 38px;
+  display: inline-block;
+}
+
+.secondsDisplay {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.secondsText {
+  font-size: 0.45em;
+  font-style: italic;
+}
+
+.startContainer {
+  text-align: center;
+  margin-top: 25px;
+}
+
+.start {
+  font-size: 1.75em;
+  left: 50%;
+  letter-spacing: 2px;
+  border: 2px solid white;
+  padding: 5px 20px;
+}
+
+.button {
+  transition: all 0.1s linear;
+  cursor: pointer;
+  user-select: none;
+}
+
+.smallbtn {
+  font-size: 1em;
+  padding: 5px 8px;
+  margin-right: 10px;
+}
+
+.button:hover {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.button:active {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#recordCanvas {
+  height: 100%;
+  width: 100%;
+}
+
+#topBar {
+  padding: 5px;
+  background: rgba(0, 0, 0, 1);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
+  box-shadow: 0px 2px -5px -1px rgba(0,0,0,0.22);
+}
+
+.container {
+  max-width: 700px;
+  height: 100%;
+  margin: 0 auto;
+  padding-top: 50px;
+}
+
+table {
+  width: 100%;
+  margin: 0 auto;
+  overflow: scroll;
+}
+
+thead {
+  background: rgba(255, 255, 255, 0.1);
+  border: none;
+}
+
+th {
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 15px;
+  color: black;
+  font-size: 1.2em;
+  background: rgba(255,255,255,0.2);
+}
+
+td {
+  text-align: center;
+  padding: 15px;
+  color: black;
+	background-color: rgba(255,255,255,0.2);
+}
+
+@media all and (max-width: 500px) {
+  .liveContainerContent {
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: none;
+  }
+
+  .liveContainerContent hr {
+    width: 100%;
+    height: 2px;
+    margin-bottom: 50px;
+  }
+
+  .liveContainerContent h1 {
+    font-size: 10vw;
+  }
+
+  .liveContainerContent h2 {
+    font-size: 7vw;
+  }
 }
