--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ html, body {
   padding: 0;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
 .liveContainer {
   min-height: 100%;
   width: 100%;
@@ -15,26 +23,37 @@ html, body {
   align-items: center;
   justify-content: center;
   background: #007e11;
-  bottom: 0;
+  flex-grow: 0;
+  flex-shrink: 0;
   z-index: 100;
-  transition: background 0.7s linear, min-height 0.25s  cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  transition: background 0.7s linear;
+
+}
+
+.green {
+  background: rgba(0, 245, 33, 0.616) !important;
+}
+
+.red {
+  background: rgba(255, 0, 0, 0.616) !important;
 }
 
 .liveContainerTimerView {
+  transition: background 0.7s linear, min-height 0.25s  cubic-bezier(0.95, 0.05, 0.795, 0.035);
   min-height: 0%;
-  position: fixed;
+  position: relative;
   box-shadow: 0px -2px 5px 1px rgba(0,0,0,0.22);
 }
 
 .liveContainerContent {
+  transition: none;
   padding: 30px;
+  transition: none;
   border: 10px solid white;
-  transition: border-color 0.15s linear, padding 0.16s 0.2s linear;
-  
 }
 
 .liveContainerContentTimerView {
-  min-height: 100px;
+  transition: border-color 0.15s linear, padding 0.16s 0.2s linear;
   border: 0px solid rgba(0, 0, 0, 0);
   padding: 5px;
 }
@@ -141,33 +160,56 @@ html, body {
 }
 
 #recordCanvas {
-  height: 100%;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  background: #232526; 
+  flex-grow: 1;
+  background: linear-gradient(to right, #232526, #414345);
 }
 
-#topBar {
-  padding: 5px;
+.homeLogo{
+  font-size: 1.5em;
+  display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.topBarContainer {
+  justify-content: space-between;
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  box-sizing: border-box; 
+  width: 100%;
   background: rgba(0, 0, 0, 1);
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow: hidden;
+}
+
+#topBtns {
+  padding: 5px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  position: fixed;
-  width: 100%;
-  overflow: hidden;
   box-shadow: 0px 2px -5px -1px rgba(0,0,0,0.22);
 }
 
 .container {
-  max-width: 700px;
-  height: 100%;
+  flex-grow: 1;
+  width: 100%;
   margin: 0 auto;
-  padding-top: 50px;
+  /* box-sizing: border-box;  */
+  background: rgba(0, 0, 0, 0.2);
+  overflow: scroll;
+  overflow-x: hidden;
 }
+
 
 table {
   width: 100%;
   margin: 0 auto;
-  overflow: scroll;
 }
 
 thead {
@@ -178,18 +220,57 @@ thead {
 th {
   font-weight: 600;
   letter-spacing: 1px;
-  padding: 15px;
-  color: black;
-  font-size: 1.2em;
-  background: rgba(255,255,255,0.2);
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.7);
 }
 
 td {
   text-align: center;
   padding: 15px;
-  color: black;
-	background-color: rgba(255,255,255,0.2);
 }
+
+tr:nth-child(even){
+	background-color: rgba(255,255,255,0.15);
+}
+
+tr:nth-child(odd){
+	background-color: rgba(255,255,255,0.1);
+
+}
+
+.disabledBtn {
+  border-color: red;
+  color: red;
+  cursor: default;
+}
+.disabledBtn:hover{
+  background: rgba(0, 0, 0, 0)
+}
+
+/* scroll bar */
+.container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: rgba(0,0,0,0.8);;
+}
+
+.container::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.container::-webkit-scrollbar-thumb
+{
+	background-color: rgba(255, 255, 255, 0.2);
+  border: none;
+  border-radius: 10px;
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+	background-color: rgba(255, 255, 255, 0.5);
+}
+
 
 @media all and (max-width: 500px) {
   .liveContainerContent {
@@ -210,6 +291,31 @@ td {
   }
 
   .liveContainerContent h2 {
-    font-size: 7vw;
+    font-size: 5vw;
+  }
+
+  .topBarContainer {
+    flex-direction: column;
+    padding: 8px 0;
+  }
+
+  .homeLogo {
+    display: block;
+    text-align: center;
+  }
+
+  #topBtns {
+    justify-content: space-around;
+  }
+
+  td, th {
+    display: block;
+    padding: 2px 10px;
+    text-align: left;
+    width: 100%;
+  }
+
+  tr {
+    width: 100%;
   }
 }
