--- a/style.css
+++ b/style.css
@@ -9,23 +9,39 @@ html, body {
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   overflow: hidden;
 }
 
 .liveContainer {
   min-height: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background: #007e11;
-  flex-grow: 0;
-  flex-shrink: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   z-index: 100;
+  -webkit-transition: background 0.7s linear;
   transition: background 0.7s linear;
 
 }
@@ -39,13 +55,16 @@ body {
 }
 
 .liveContainerTimerView {
+  -webkit-transition: background 0.7s linear, min-height 0.25s  cubic-bezier(0.95, 0.05, 0.795, 0.035);
   transition: background 0.7s linear, min-height 0.25s  cubic-bezier(0.95, 0.05, 0.795, 0.035);
   min-height: 0%;
   position: relative;
-  box-shadow: 0px -2px 5px 1px rgba(0,0,0,0.22);
+  -webkit-box-shadow: 0px -2px 5px 1px rgba(0,0,0,0.22);
+          box-shadow: 0px -2px 5px 1px rgba(0,0,0,0.22);
 }
 
 .liveContainerContent {
+  -webkit-transition: none;
   transition: none;
   padding: 30px;
   transition: none;
@@ -53,6 +72,7 @@ body {
 }
 
 .liveContainerContentTimerView {
+  -webkit-transition: border-color 0.15s linear, padding 0.16s 0.2s linear;
   transition: border-color 0.15s linear, padding 0.16s 0.2s linear;
   border: 0px solid rgba(0, 0, 0, 0);
   padding: 5px;
@@ -82,6 +102,7 @@ body {
 }
 
 #config {
+  -webkit-transition: all 0.5s 600ms cubic-bezier(0.95, 0.05, 0.795, 0.035);
   transition: all 0.5s 600ms cubic-bezier(0.95, 0.05, 0.795, 0.035);
 }
 
@@ -99,10 +120,19 @@ body {
 #configButtons {
   font-size: 2em;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .circleButton {
@@ -115,8 +145,13 @@ body {
 }
 
 .secondsDisplay {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -140,9 +175,13 @@ body {
 }
 
 .button {
+  -webkit-transition: all 0.1s linear;
   transition: all 0.1s linear;
   cursor: pointer;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .smallbtn {
@@ -161,11 +200,19 @@ body {
 
 #recordCanvas {
   /* height: 100%; */
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
   background: #232526; 
-  flex-grow: 1;
+  -webkit-box-flex: 1; 
+      -ms-flex-positive: 1; 
+          flex-grow: 1;
+  background: -webkit-gradient(linear, left top, right top, from(#232526), to(#414345));
   background: linear-gradient(to right, #232526, #414345);
 }
 
@@ -176,14 +223,24 @@ body {
 }
 
 .topBarContainer {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-grow: 0;
-  flex-shrink: 0;
-  box-sizing: border-box; 
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; 
   width: 100%;
   background: rgba(0, 0, 0, 1);
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-left: 20px;
   padding-right: 20px;
   overflow: hidden;
@@ -191,13 +248,21 @@ body {
 
 #topBtns {
   padding: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  box-shadow: 0px 2px -5px -1px rgba(0,0,0,0.22);
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-shadow: 0px 2px -5px -1px rgba(0,0,0,0.22);
+          box-shadow: 0px 2px -5px -1px rgba(0,0,0,0.22);
 }
 
 .container {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   width: 100%;
   margin: 0 auto;
   /* box-sizing: border-box;  */
@@ -295,7 +360,10 @@ tr:nth-child(odd){
   }
 
   .topBarContainer {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding: 8px 0;
   }
 
@@ -305,7 +373,8 @@ tr:nth-child(odd){
   }
 
   #topBtns {
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
 
   td, th {
