--- a/style.css
+++ b/style.css
@@ -260,6 +260,8 @@ img.author_logo:hover {
   padding-left: 20px;
   padding-right: 20px;
   overflow: hidden;
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
 }
 
 .topBarLogo {
@@ -277,8 +279,7 @@ img.author_logo:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-shadow: 0px 2px -5px -1px rgba(0,0,0,0.22);
-          box-shadow: 0px 2px -5px -1px rgba(0,0,0,0.22);
+
 }
 
 .container {
@@ -359,7 +360,7 @@ tr:nth-child(odd){
 }
 
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 530px) {
   .liveContainerContent {
     padding: 10px;
     margin-left: 10px;
@@ -395,8 +396,13 @@ tr:nth-child(odd){
   }
 
   #topBtns {
+    width: 100%;
     -ms-flex-pack: distribute;
         justify-content: space-around;
+  }
+
+  img.author_logo {
+    height: 1.5em;
   }
 
   td, th {
@@ -409,4 +415,13 @@ tr:nth-child(odd){
   tr {
     width: 100%;
   }
+
+  tr td:first-child {
+    padding-top: 12px;
+  }
+
+  tr td:last-child {
+    padding-bottom: 12px;
+  }
+
 }
