--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ a {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   z-index: 100;
-  -webkit-transition: background 0.7s linear;
-  transition: background 0.7s linear;
+  -webkit-transition: background 0.7s linear, min-height 0.25s  cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  transition: background 0.7s linear, min-height 0.25s  cubic-bezier(0.95, 0.05, 0.795, 0.035);
 
 }
 
@@ -111,7 +111,9 @@ a {
 }
 
 .displayNone {
-  display: none;
+  /* display: none !important; */
+  height: 0px !important;
+  display: none !important;
 }
 
 #config h3 {
@@ -203,7 +205,6 @@ a {
 }
 
 #recordCanvas {
-  /* height: 100%; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -216,6 +217,9 @@ a {
   -webkit-box-flex: 1; 
       -ms-flex-positive: 1; 
           flex-grow: 1;
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: hidden;
   background: -webkit-gradient(linear, left top, right top, from(#232526), to(#414345));
   background: linear-gradient(to right, #232526, #414345);
 }
@@ -231,6 +235,7 @@ img.author_logo {
   margin-left: 15px;
   margin-right: 15px;
   opacity: 0.5;
+  -webkit-transition: all 500ms linear;
   transition: all 500ms linear;
 }
 
@@ -260,14 +265,22 @@ img.author_logo:hover {
   padding-left: 20px;
   padding-right: 20px;
   overflow: hidden;
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+          box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
 
 }
 
 .topBarLogo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #topBtns {
